# TVG

P1/: CMakeLists.txt
P1/ShrinkImageFilter/: CMakeLists.txt  ShrinkImageFilter.cxx
prePracticas/guiaInstalacion+src/paraAlumnos/src/: 0LEEME.txt
prePracticas/guiaInstalacion+src/paraAlumnos/src/itk+vtk/QuickViewDemo/: CMakeLists.txt
prePracticas/guiaInstalacion+src/paraAlumnos/src/itk+vtk/test-itk+vtk/: CMakeLists.txt  miTest.cpp
prePracticas/guiaInstalacion+src/paraAlumnos/src/openGL/: firstOpenGL+glut.cpp  openGL+glut01.cpp  openGL+glut02.cpp
prePracticas/guiaInstalacion+src/paraAlumnos/src/vtk/rendering/: CMakeLists.txt  Cylinder.cxx
